# max-ai-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  NAS_ONE_YAML.md  NAS_STORAGE_MIGRATION.md  PROJECT_PASSPORT.md  README.md  docker-compose.nas.yml  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
app/: __init__.py  chunking.py  config.py  core.py  dashboard.py  main.py  monitoring.py  n8n.py  pairing.py  provider_info.py  pymax_transport.py  queue.py  runtime.py  storage.py  supervisor.py  transport.py  web.py
app/providers/: __init__.py  base.py  openai_compatible.py
app/web_static/: app.js  enhancements.js  index.html  styles.css
tests/: __init__.py  test_chunking.py  test_config.py  test_core.py  test_dashboard.py  test_n8n.py  test_openai_provider.py  test_pairing.py  test_provider_info.py  test_pymax_transport.py  test_queue.py  test_runtime_factories.py  test_storage.py  test_supervisor.py  test_web.py
