[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "max-ai-assistant"
version = "0.3.2"
description = "Owner-only personal AI assistant transport for MAX"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "aiohttp==3.14.1",
    "maxapi-python==2.3.1",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.unittest]
start-directory = "tests"
